// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-column-size-field Renders \`c-column-size-field\` with custom props 1`] = `
<div
  class="v-input c-column-size-field v-input--selection-controls v-input--radio-group v-input--radio-group--row v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light c-column-size-field--mobile"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
      style="height: auto;"
    >
      <div
        class="v-input--radio-group__input"
        role="radiogroup"
      >
        <div
          class="v-radio ma-0 theme--light"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <input
              aria-checked="false"
              name="custom_name"
              role="radio"
              type="radio"
              value="1"
            />
            <div
              class="v-input--selection-controls__ripple"
            />
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              radio_button_unchecked
            </i>
          </div>
          <label
            aria-hidden="true"
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            <div
              class="v-responsive v-image my-2"
            >
              <transition-stub
                mode="in-out"
                name="fade-transition"
              >
                <div
                  class="v-image__image v-image__image--preload v-image__image--cover"
                  style="background-position: center center;"
                />
              </transition-stub>
              <div
                class="v-responsive__content"
              />
            </div>
          </label>
        </div>
        <div
          class="v-radio ma-0 theme--light"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <input
              aria-checked="false"
              name="custom_name"
              role="radio"
              type="radio"
              value="2"
            />
            <div
              class="v-input--selection-controls__ripple"
            />
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              radio_button_unchecked
            </i>
          </div>
          <label
            aria-hidden="true"
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            <div
              class="v-responsive v-image my-2"
            >
              <transition-stub
                mode="in-out"
                name="fade-transition"
              >
                <div
                  class="v-image__image v-image__image--preload v-image__image--cover"
                  style="background-position: center center;"
                />
              </transition-stub>
              <div
                class="v-responsive__content"
              />
            </div>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-column-size-field Renders \`c-column-size-field\` with required props 1`] = `
<div
  class="v-input c-column-size-field v-input--selection-controls v-input--radio-group v-input--radio-group--row v-input--hide-details theme--light"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
      style="height: auto;"
    >
      <div
        class="v-input--radio-group__input"
        role="radiogroup"
      >
        <div
          class="v-radio ma-0 theme--light"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <input
              aria-checked="false"
              name="size"
              role="radio"
              type="radio"
              value="1"
            />
            <div
              class="v-input--selection-controls__ripple"
            />
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              radio_button_unchecked
            </i>
          </div>
          <label
            aria-hidden="true"
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            <div
              class="v-responsive v-image my-2"
            >
              <transition-stub
                mode="in-out"
                name="fade-transition"
              >
                <div
                  class="v-image__image v-image__image--preload v-image__image--cover"
                  style="background-position: center center;"
                />
              </transition-stub>
              <div
                class="v-responsive__content"
              />
            </div>
          </label>
        </div>
        <div
          class="v-radio ma-0 theme--light"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <input
              aria-checked="false"
              name="size"
              role="radio"
              type="radio"
              value="2"
            />
            <div
              class="v-input--selection-controls__ripple"
            />
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              radio_button_unchecked
            </i>
          </div>
          <label
            aria-hidden="true"
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            <div
              class="v-responsive v-image my-2"
            >
              <transition-stub
                mode="in-out"
                name="fade-transition"
              >
                <div
                  class="v-image__image v-image__image--preload v-image__image--cover"
                  style="background-position: center center;"
                />
              </transition-stub>
              <div
                class="v-responsive__content"
              />
            </div>
          </label>
        </div>
        <div
          class="v-radio ma-0 theme--light"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <input
              aria-checked="false"
              name="size"
              role="radio"
              type="radio"
              value="3"
            />
            <div
              class="v-input--selection-controls__ripple"
            />
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              radio_button_unchecked
            </i>
          </div>
          <label
            aria-hidden="true"
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            <div
              class="v-responsive v-image my-2"
            >
              <transition-stub
                mode="in-out"
                name="fade-transition"
              >
                <div
                  class="v-image__image v-image__image--preload v-image__image--cover"
                  style="background-position: center center;"
                />
              </transition-stub>
              <div
                class="v-responsive__content"
              />
            </div>
          </label>
        </div>
        <div
          class="v-radio ma-0 theme--light"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <input
              aria-checked="false"
              name="size"
              role="radio"
              type="radio"
              value="4"
            />
            <div
              class="v-input--selection-controls__ripple"
            />
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              radio_button_unchecked
            </i>
          </div>
          <label
            aria-hidden="true"
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            <div
              class="v-responsive v-image my-2"
            >
              <transition-stub
                mode="in-out"
                name="fade-transition"
              >
                <div
                  class="v-image__image v-image__image--preload v-image__image--cover"
                  style="background-position: center center;"
                />
              </transition-stub>
              <div
                class="v-responsive__content"
              />
            </div>
          </label>
        </div>
        <div
          class="v-radio ma-0 theme--light"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <input
              aria-checked="false"
              name="size"
              role="radio"
              type="radio"
              value="6"
            />
            <div
              class="v-input--selection-controls__ripple"
            />
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              radio_button_unchecked
            </i>
          </div>
          <label
            aria-hidden="true"
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            <div
              class="v-responsive v-image my-2"
            >
              <transition-stub
                mode="in-out"
                name="fade-transition"
              >
                <div
                  class="v-image__image v-image__image--preload v-image__image--cover"
                  style="background-position: center center;"
                />
              </transition-stub>
              <div
                class="v-responsive__content"
              />
            </div>
          </label>
        </div>
        <div
          class="v-radio ma-0 theme--light"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <input
              aria-checked="false"
              name="size"
              role="radio"
              type="radio"
              value="12"
            />
            <div
              class="v-input--selection-controls__ripple"
            />
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              radio_button_unchecked
            </i>
          </div>
          <label
            aria-hidden="true"
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            <div
              class="v-responsive v-image my-2"
            >
              <transition-stub
                mode="in-out"
                name="fade-transition"
              >
                <div
                  class="v-image__image v-image__image--preload v-image__image--cover"
                  style="background-position: center center;"
                />
              </transition-stub>
              <div
                class="v-responsive__content"
              />
            </div>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-column-size-field Renders \`c-column-size-field\` with tablet prop 1`] = `
<div
  class="v-input c-column-size-field v-input--selection-controls v-input--radio-group v-input--radio-group--row v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
      style="height: auto;"
    >
      <div
        class="v-input--radio-group__input"
        role="radiogroup"
      >
        <div
          class="v-radio ma-0 theme--light"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <input
              aria-checked="false"
              name="size"
              role="radio"
              type="radio"
              value="1"
            />
            <div
              class="v-input--selection-controls__ripple"
            />
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              radio_button_unchecked
            </i>
          </div>
          <label
            aria-hidden="true"
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            <div
              class="v-responsive v-image my-2"
            >
              <transition-stub
                mode="in-out"
                name="fade-transition"
              >
                <div
                  class="v-image__image v-image__image--preload v-image__image--cover"
                  style="background-position: center center;"
                />
              </transition-stub>
              <div
                class="v-responsive__content"
              />
            </div>
          </label>
        </div>
        <div
          class="v-radio ma-0 theme--light"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <input
              aria-checked="false"
              name="size"
              role="radio"
              type="radio"
              value="2"
            />
            <div
              class="v-input--selection-controls__ripple"
            />
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              radio_button_unchecked
            </i>
          </div>
          <label
            aria-hidden="true"
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            <div
              class="v-responsive v-image my-2"
            >
              <transition-stub
                mode="in-out"
                name="fade-transition"
              >
                <div
                  class="v-image__image v-image__image--preload v-image__image--cover"
                  style="background-position: center center;"
                />
              </transition-stub>
              <div
                class="v-responsive__content"
              />
            </div>
          </label>
        </div>
        <div
          class="v-radio ma-0 theme--light"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <input
              aria-checked="false"
              name="size"
              role="radio"
              type="radio"
              value="3"
            />
            <div
              class="v-input--selection-controls__ripple"
            />
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              radio_button_unchecked
            </i>
          </div>
          <label
            aria-hidden="true"
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            <div
              class="v-responsive v-image my-2"
            >
              <transition-stub
                mode="in-out"
                name="fade-transition"
              >
                <div
                  class="v-image__image v-image__image--preload v-image__image--cover"
                  style="background-position: center center;"
                />
              </transition-stub>
              <div
                class="v-responsive__content"
              />
            </div>
          </label>
        </div>
        <div
          class="v-radio ma-0 theme--light"
        >
          <div
            class="v-input--selection-controls__input"
          >
            <input
              aria-checked="false"
              name="size"
              role="radio"
              type="radio"
              value="4"
            />
            <div
              class="v-input--selection-controls__ripple"
            />
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              radio_button_unchecked
            </i>
          </div>
          <label
            aria-hidden="true"
            class="v-label theme--light"
            style="left: 0px; position: relative;"
          >
            <div
              class="v-responsive v-image my-2"
            >
              <transition-stub
                mode="in-out"
                name="fade-transition"
              >
                <div
                  class="v-image__image v-image__image--preload v-image__image--cover"
                  style="background-position: center center;"
                />
              </transition-stub>
              <div
                class="v-responsive__content"
              />
            </div>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;
